more test and lab verification
